Bug 1235489 - Remove assertion which is breakable when reflow is interrupted. r=jfkthame